--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
       ALANA LISBINSKI
       <span>FULL-STACK DEVELOPER</span>
     </div>
-    <span>
-      <p class="email">contaact.alanalisbinski@gmail.com</p>
-    </p>
-  </span>
+    <div class="header-right" aria-label="Contact information">
+      Email: contact.alanalisbinski@gmail.com
+    </div>
+  </header>
 
   <div class="main-content" aria-label="Main portfolio content">
 
@@ -134,4 +134,3 @@
 
 </body>
 </html>
-
