Revise personal details and skills in index.html
Updated personal information and skills in the portfolio section.

--- a/index.html
+++ b/index.html
@@ -66,11 +66,11 @@
     <div aria-labelledby="skills-title">
       <h3 id="skills-title" class="section-title blue-title">Skills</h3>
       <ul>
-        <li>Iniciei com pequenos sites</li>
-        <li>Aprendi Web-design</li>
-        <li>Aprendi a trabalhar com MySQL e FireBase</li>
-        <li>Começei a estudar back-end</li>
-        <li>Aprendi C++</li>
+        <li>JavaScript</li>
+        <li>Python</li>
+        <li>C++</li>
+        <li>C#</li>
+        <li>Kotlin</li>
       </ul>
     </div>
   </div>
@@ -131,4 +131,5 @@
 
 </body>
 </html>
+
 
