--- a/index.html
+++ b/index.html
@@ -22,7 +22,11 @@
     <section class="info-box" aria-labelledby="about-title">
       <h3 id="about-title" class="section-title pink-title">Sobre Mim</h3>
       <p class="about-text">
-       Olá! Me chamo Alana Cristina, eu tenho 18 anos e sou uma programadora Full-Stack
+       Oláa! Sou Alana Cristina, desenvolvedora Full-Stack apaixonada por
+        tecnologia e criação de interfaces.
+        Trabalho com desenvolvimento web, web design e banco de dados, utilizando
+        ferramentas como MySQL e Firebase.
+        Meu foco é evoluir continuamente e construir soluções eficientes e bem estruturadas.
       </p>
       <h4 class="section-title pink-title" style="margin-top: 20px;">Redes Sociais</h4>
       <div class="social" aria-label="Social media links">
@@ -131,5 +135,6 @@
 
 </body>
 </html>
+
 
 
