Fix HTML structure and formatting issues

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <section class="info-box" aria-labelledby="about-title">
       <h3 id="about-title" class="section-title pink-title">Sobre Mim</h3>
       <p class="about-text">
-       Oláa! Sou Alana Cristina, desenvolvedora Full-Stack apaixonada por
+       Olá! Sou Alana Cristina, desenvolvedora Full-Stack apaixonada por
         tecnologia e criação de interfaces.
         Trabalho com desenvolvimento web, web design e banco de dados, utilizando
         ferramentas como MySQL e Firebase.
@@ -135,6 +135,7 @@
 
 </body>
 </html>
+
 
 
 
