--- a/index.html
+++ b/index.html
@@ -58,13 +58,13 @@
 
   <div class="ed-skills" aria-label="Education and Skills">
     <div aria-labelledby="education-title">
-      <h3 id="education-title" class="section-title blue-title">Educação</h3>
+      <h3 id="education-title" class="section-title blue-title">Minha trajetória na programação</h3>
       <ul>
-        <li>Iniciei com pequenos sites</li>
-        <li>Aprendi Web-design</li>
-        <li>Aprendi a trabalhar com MySQL e FireBase</li>
-        <li>Começei a estudar back-end</li>
-        <li>Aprendi C++</li>
+        <li>Criei meus pequenos sites para aprender HTML, CSS e JavaScript</li>
+        <li>Desenvolvi interesse por web design e comecei a estudar interfaces</li>
+        <li>Aprendi a trabalhar com MySQL e Firebase</li>
+        <li>Iniciei meus estudos em Back-end</li>
+        <li>Me apofundei em C++</li>
       </ul>
     </div>
     <div aria-labelledby="skills-title">
@@ -135,6 +135,7 @@
 
 </body>
 </html>
+
 
 
 
