--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <li>Desenvolvi interesse por web design e comecei a estudar interfaces</li>
         <li>Aprendi a trabalhar com MySQL e Firebase</li>
         <li>Iniciei meus estudos em Back-end</li>
-        <li>Aprofundei em C++</li>
+        <li>Aprofundei meus estudos em C++</li>
       </ul>
     </div>
     <div aria-labelledby="skills-title">
@@ -135,6 +135,7 @@
 
 </body>
 </html>
+
 
 
 
